Simple example of registering + discovering transport endpoints

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,13 +3,16 @@ project(ros2_comm)
 
 set(CMAKE_BUILD_TYPE RelWithDebInfo)
 
-find_package(catkin REQUIRED COMPONENTS cpp_common rosconsole roscpp_serialization)
+find_package(catkin REQUIRED COMPONENTS cpp_common rosconsole roscpp_serialization message_generation)
 
 ## System dependencies are found with CMake's conventions
 find_package(Boost REQUIRED COMPONENTS system signals)
 
 find_package(PkgConfig REQUIRED)
 pkg_search_module(zmq REQUIRED libzmq)
+
+add_service_files(FILES TopicRequest.srv)
+generate_messages()
 
 catkin_package(
 #  INCLUDE_DIRS include
@@ -30,11 +33,18 @@ include_directories(${catkin_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
 add_library(ros2_comm src/core.cpp src/io.cpp src/poll_set.cpp
   src/poll_manager.cpp src/common.cpp src/transport_tcp.cpp src/header.cpp)
 target_link_libraries(ros2_comm ${catkin_LIBRARIES} ${Boost_LIBRARIES} ${zmq_LIBRARIES})
-# Declare a cpp executable
+
+# Basic pub/sub
 add_executable(simple_sub src/simple_sub.cpp)
 add_executable(simple_pub src/simple_pub.cpp)
 target_link_libraries(simple_sub ros2_comm)
 target_link_libraries(simple_pub ros2_comm)
+
+# Pub/sub with registration
+add_executable(register_sub src/register_sub.cpp)
+add_executable(register_pub src/register_pub.cpp)
+target_link_libraries(register_sub ros2_comm)
+target_link_libraries(register_pub ros2_comm)
 
 #############
 ## Install ##
