--- a/package.xml
+++ b/package.xml
@@ -14,9 +14,11 @@
   <build_depend>cpp_common</build_depend>
   <build_depend>rosconsole</build_depend>
   <build_depend>roscpp_serialization</build_depend>
+  <build_depend>message_generation</build_depend>
   <run_depend>cpp_common</run_depend>
   <run_depend>rosconsole</run_depend>
   <run_depend>roscpp_serialization</run_depend>
+  <run_depend>message_generation</run_depend>
   <buildtool_depend>catkin</buildtool_depend>
 
 </package>
