Refactor includes / where code is stored

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,15 +32,9 @@ catkin_package(
 # include_directories(include ${catkin_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
 include_directories(${catkin_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
 
-add_library(ros2_comm src/io.cpp src/poll_set.cpp
+add_library(ros2_comm src/io.cpp src/poll_set.cpp src/topic_manager.cpp
   src/poll_manager.cpp src/common.cpp src/transport_tcp.cpp src/header.cpp)
 target_link_libraries(ros2_comm ${catkin_LIBRARIES} ${Boost_LIBRARIES} ${zmq_LIBRARIES} "snappy")
-
-# Basic pub/sub
-# add_executable(simple_sub src/simple_sub.cpp)
-# add_executable(simple_pub src/simple_pub.cpp)
-# target_link_libraries(simple_sub ros2_comm)
-# target_link_libraries(simple_pub ros2_comm)
 
 # Pub/sub with registration
 add_executable(register_sub src/register_sub.cpp)
